--- a/references.html
+++ b/references.html
@@ -35,6 +35,14 @@
         https://www.naturalearthdata.com/
       </a>
     </li>
+
+    <li id="ref-gocart">
+      GoCart. (n.d.). 
+      <em>GoCart.io</em>. 
+      <a href="https://go-cart.io/" target="_blank">
+        https://go-cart.io/
+      </a>
+    </li>
   </ol>
 
 </body>
