--- a/references.html
+++ b/references.html
@@ -12,7 +12,7 @@
 
   <h2>References</h2>
   <ol>
-    <li id="ref-visualcapitalist">
+    <li>
       Visual Capitalist. (2023, September 21). 
       <em>Charted: The World’s Biggest Oil Producers.</em> 
       <a href="https://www.visualcapitalist.com/charted-worlds-biggest-oil-producers-in-2022/" target="_blank">
@@ -20,27 +20,35 @@
       </a>
     </li>
 
-    <li id="ref-energyinstitute">
+    <li>
       Energy Institute. (2024). 
       <em>Statistical Review of World Energy 2024, Oil Production - barrels sheet.</em> 
-      Available: 
       <a href="https://www.energyinst.org/statistical-review/home" target="_blank">
         https://www.energyinst.org/statistical-review/home
       </a>
     </li>
 
-    <li id="ref-naturalearth">
-      Natural Earth. (n.d.). Base map data. 
-      <a href="https://www.naturalearthdata.com/" target="_blank">
-        https://www.naturalearthdata.com/
+    <li>
+      Go-Cart.io. (2025). 
+      <em>Online Cartogram Creator.</em> 
+      <a href="https://go-cart.io/" target="_blank">
+        https://go-cart.io/
       </a>
     </li>
 
-    <li id="ref-gocart">
-      GoCart. (n.d.). 
-      <em>GoCart.io</em>. 
-      <a href="https://go-cart.io/" target="_blank">
-        https://go-cart.io/
+    <li>
+      South, A. (2023, December 15). 
+      <em>rnaturalearth: World Map Data from Natural Earth.</em> CRAN. 
+      <a href="https://cran.r-project.org/web/packages/rnaturalearth/index.html" target="_blank">
+        https://cran.r-project.org/web/packages/rnaturalearth/index.html
+      </a>
+    </li>
+
+    <li>
+      R-charts. (2025). 
+      <em>Non-contiguous Cartograms with ggplot2.</em> 
+      <a href="https://r-charts.com/spatial/cartogram-ggplot2/#non-contiguous" target="_blank">
+        https://r-charts.com/spatial/cartogram-ggplot2/#non-contiguous
       </a>
     </li>
   </ol>
